# onyx-server

./: .gitignore  AGENTS.md  CHECKPOINT.md  CONTINUE.md  README.md  pyproject.toml  start.sh
admin/: query_logs.py
backend/: config.py  dashboard.py  database.py  install.sh  main.py  model_rotator.py  models.py  notifier.py  prompt_honeypot.py  proxy.py  rate_limit.py  requirements.txt  telemetry.py
cli/: __init__.py  onyx.py
docs/plan/: README.md
