[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "onyx-cli"
version = "0.2.0"
description = "AI coding assistant — backend proxy to DeepSeek + CLI client"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28",
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
onyx = "cli.onyx:app"

[tool.setuptools.packages.find]
include = ["cli*"]
